--- a/input/_navigation.cshtml
+++ b/input/_navigation.cshtml
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" href="@Context.GetLink("/")">@Context.GetString("SiteTitle")</a>
+    <a class="navbar-brand" href="@Context.GetLink("/")">
+        <img src="/images/pic.jpeg" class="rounded-circle" width="40" height="40" alt="Pankaj Rawat">&nbsp;&nbsp;@Context.GetString("SiteTitle")
+    </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fas fa-bars"></i>
